--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="header-image-content">
-                <img src="Achivment/WhatsApp Image 2025-06-09 at 10.17.07_35609ff2.jpg" alt="Sushant Shete" class="profile-img">
+                <img src="Achivment/profile photo/My photo.jpg" alt="Sushant Shete" class="profile-img">
             </div>
         </div>
     </header>
@@ -71,15 +71,19 @@
             <div class="skills-icons-grid">
                 <div class="skill-icon-card">
                     <i class="fab fa-html5 skill-logo-icon"></i>
-                    <h3>HTML5</h3>
+                    <h3>HTML</h3>
                 </div>
                 <div class="skill-icon-card">
                     <i class="fab fa-css3-alt skill-logo-icon"></i>
                     <h3>CSS</h3>
                 </div>
                 <div class="skill-icon-card">
-                    <i class="fab fa-js skill-logo-icon"></i>
-                    <h3>JavaScript</h3>
+                    <i class="fab fa-java skill-logo-icon"></i>
+                    <h3>Java</h3>
+                </div>
+                <div class="skill-icon-card">
+                    <i class="fab fa-c skill-logo-icon"></i>
+                    <h3>Basic C</h3>
                 </div>
                 <div class="skill-icon-card">
                     <i class="fab fa-python skill-logo-icon"></i>
@@ -87,7 +91,7 @@
                 </div>
             </div>
             <div class="resume-download-section">
-                <a href="Sushant Shete.pdf" download class="btn primary-btn download-resume-btn">
+                <a href="Achivment/Resume/Resume.pdf" download class="btn primary-btn download-resume-btn">
                     <i class="fas fa-download"></i> Download My Resume
                 </a>
             </div>
@@ -105,10 +109,10 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <div class="certificate-info">
-                        <h3>Microsoft Learn Achievement</h3>
-                        <p class="issuer">Microsoft</p>
-                        <p class="date">Issued: 2024</p>
-                        <a href="Achivment/Achievements - sushantshete-8023 _ Microsoft Learn (2).pdf" class="view-certificate" target="_blank">View Certificate</a>
+                        <h3>Cad Master</h3>
+                        <p class="issuer">Sveri College of Engineering</p>
+                        <p class="date">Issued: 2025</p>
+                        <a href="Achivment/Certificates/Cad master.jpg" class="view-certificate" target="_blank">View Certificate</a>
                     </div>
                 </div>
                 <div class="certificate-card">
@@ -116,10 +120,10 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <div class="certificate-info">
-                        <h3>HTML Certification</h3>
+                        <h3>HTML page from microsoft learn</h3>
                         <p class="issuer">Web Development</p>
                         <p class="date">Issued: 2024</p>
-                        <a href="Achivment/html.pdf" class="view-certificate" target="_blank">View Certificate</a>
+                        <a href="Achivment/Certificates/html.pdf" class="view-certificate" target="_blank">View Certificate</a>
                     </div>
                 </div>
                 <div class="certificate-card">
@@ -127,10 +131,10 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <div class="certificate-info">
-                        <h3>CSS Certification</h3>
+                        <h3>CSS styles from microsoft learn</h3>
                         <p class="issuer">Web Development</p>
                         <p class="date">Issued: 2024</p>
-                        <a href="Achivment/Achievements - sushantshete-8023 _ Microsoft Learn.pdf" class="view-certificate" target="_blank">View Certificate</a>
+                        <a href="Achivment/Certificates/CSS styles.pdf" class="view-certificate" target="_blank">View Certificate</a>
                     </div>
                 </div>
                 <div class="certificate-card">
@@ -138,10 +142,10 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <div class="certificate-info">
-                        <h3>Generative AI Certification</h3>
-                        <p class="issuer">ChatGPT, AI</p>
-                        <p class="date">Issued: 2024</p>
-                        <a href="Achivment/Sushant  Shete  - 2025-06-10.pdf" class="view-certificate" target="_blank">View Certificate</a>
+                        <h3>Generative AI</h3>
+                        <p class="issuer">LinkedIn learning</p>
+                        <p class="date">Issued: 2025</p>
+                        <a href="Achivment/Certificates/Gen AI linkdine.jpg" class="view-certificate" target="_blank">View Certificate</a>
                     </div>
                 </div>
                 <div class="certificate-card">
@@ -149,10 +153,10 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <div class="certificate-info">
-                        <h3>Prompt Engineering Certification</h3>
-                        <p class="issuer">ChatGPT, AI</p>
-                        <p class="date">Issued: 2024</p>
-                        <a href="Achivment/Sushant Certificate.jpg" class="view-certificate" target="_blank">View Certificate</a>
+                        <h3>Genrativ AI Workshop</h3>
+                        <p class="issuer"> Nxt Wave & Open AI</p>
+                        <p class="date">Issued: 2025</p>
+                        <a href="Achivment/Certificates/Gen AI (NXT WAVE).jpg" class="view-certificate" target="_blank">View Certificate</a>
                     </div>
                 </div>
                 <div class="certificate-card">
@@ -160,12 +164,79 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <div class="certificate-info">
-                        <h3>Academic Certificate</h3>
+                        <h3>Matlab Certificate</h3>
                         <p class="issuer">ChatGPT, AI</p>
                         <p class="date">Issued: 2025</p>
-                        <a href="Achivment/Sushant Shete.pdf" class="view-certificate" target="_blank">View Certificate</a>
+                        <a href="Achivment/Certificates/certificate  Matlab.pdf" class="view-certificate" target="_blank">View Certificate</a>
                     </div>
                 </div>
+                <div class="certificate-card">
+                    <div class="certificate-icon">
+                        <i class="fas fa-certificate"></i>
+                    </div>
+                    <div class="certificate-info">
+                        <h3>ChatGPT workshop</h3>
+                        <p class="issuer"> Open AI</p>
+                        <p class="date">Issued: 2025</p>
+                        <a href="Achivment/Certificates/ChatGPT for Everyone.pdf" class="view-certificate" target="_blank">View Certificate</a>
+                    </div>
+                </div>
+                <div class="certificate-card">
+                    <div class="certificate-icon">
+                        <i class="fas fa-certificate"></i>
+                    </div>
+                    <div class="certificate-info">
+                        <h3>Clone Logic</h3>
+                        <p class="issuer">Sveri College of Engineering</p>
+                        <p class="date">Issued: 2025</p>
+                        <a href="Achivment/Certificates/Clone Logic.jpg" class="view-certificate" target="_blank">View Certificate</a>
+                    </div>
+                </div>
+                <div class="certificate-card">
+                    <div class="certificate-icon">
+                        <i class="fas fa-certificate"></i>
+                    </div>
+                    <div class="certificate-info">
+                        <h3>E-medicine management</h3>
+                        <p class="issuer">Sveri College of Engineering</p>
+                        <p class="date">Issued: 2025</p>
+                        <a href="Achivment/Certificates/E-medi.jpg" class="view-certificate" target="_blank">View Certificate</a>
+                    </div>
+                </div>
+                <div class="certificate-card">
+                    <div class="certificate-icon">
+                        <i class="fas fa-certificate"></i>
+                    </div>
+                    <div class="certificate-info">
+                        <h3>Prompt Engineering</h3>
+                        <p class="issuer"> Alison </p>
+                        <p class="date">Issued: 2025</p>
+                        <a href="Achivment/Certificates/Prompt.jpg" class="view-certificate" target="_blank">View Certificate</a>
+                    </div>
+                </div>
+                <div class="certificate-card">
+                    <div class="certificate-icon">
+                        <i class="fas fa-certificate"></i>
+                    </div>
+                    <div class="certificate-info">
+                        <h3>Web accessibility</h3>
+                        <p class="issuer"> Google</p>
+                        <p class="date">Issued: 2025</p>
+                        <a href="Achivment/Certificates/Web accessibility.pdf" class="view-certificate" target="_blank">View Certificate</a>
+                    </div>
+                </div>
+                <div class="certificate-card">
+                    <div class="certificate-icon">
+                        <i class="fas fa-certificate"></i>
+                    </div>
+                    <div class="certificate-info">
+                        <h3>AI for everyone</h3>
+                        <p class="issuer"> Coursera</p>
+                        <p class="date">Issued: 2025</p>
+                        <a href="Achivment/Certificates/AI for everyone.pdf" class="view-certificate" target="_blank">View Certificate</a>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
@@ -178,7 +249,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="milk-store.png" alt="Milk Store Inventory System">
+                        <img src="Achivment/project/milk.jpg" alt="Milk Store Inventory System">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://sushant00001.github.io/Home/milk.html" class="project-link" target="_blank" title="View Live Demo">
@@ -194,8 +265,8 @@
                         <h3>Milk Store Inventory System</h3>
                         <p>A comprehensive inventory management system for milk stores. Features include adding milk inventory, tracking quantities, dates, and prices. The system allows users to save inventory data and view previous records. Built with HTML, CSS, and JavaScript for efficient data management.</p>
                         <div class="project-tech">
-                            <span>HTML5</span>
-                            <span>CSS3</span>
+                            <span>HTML</span>
+                            <span>CSS</span>
                             <span>JavaScript</span>
                             <span>LocalStorage</span>
                         </div>
@@ -204,7 +275,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="inventory.png" alt="Advanced Inventory Management">
+                        <img src="Achivment/project/milk2.jpg" alt="Advanced Inventory Management">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://sushant00001.github.io/first1/inventory.html" class="project-link" target="_blank" title="View Live Demo">
@@ -220,8 +291,8 @@
                         <h3>Advanced Inventory Management</h3>
                         <p>An enhanced version of the inventory system with improved features for managing milk inventory. The system includes date and time tracking, price management, and historical data viewing. Users can add, save, and view inventory records with detailed information about milk quantities and prices.</p>
                         <div class="project-tech">
-                            <span>HTML5</span>
-                            <span>CSS3</span>
+                            <span>HTML</span>
+                            <span>CSS</span>
                             <span>JavaScript</span>
                             <span>Data Management</span>
                         </div>
@@ -230,7 +301,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="game.png" alt="Interactive Game">
+                        <img src="Achivment/project/Guess Game.jpg" alt="Interactive Game">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://sushant00001.github.io/Game/index.html" class="project-link" target="_blank" title="View Live Demo">
@@ -246,8 +317,8 @@
                         <h3>Interactive Game</h3>
                         <p>An engaging browser-based game that demonstrates interactive web development skills. The game features smooth animations, responsive controls, and dynamic gameplay elements. Players can enjoy an interactive experience with intuitive controls and engaging mechanics.</p>
                         <div class="project-tech">
-                            <span>HTML5</span>
-                            <span>CSS3</span>
+                            <span>HTML</span>
+                            <span>CSS</span>
                             <span>JavaScript</span>
                             <span>Game Development</span>
                         </div>
